# rules_emscripten

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  http_archive_by_os.bzl  repositories.bzl
toolchain/: BUILD.bazel  CROSSTOOL  defs.bzl  emar.sh  embuilder.sh  emcc.sh  emenv.sh  sed_i.sh
toolchain/emscripten_cache/asmjs/: al.bc  bullet.bc  dlmalloc.bc  dlmalloc_debug.bc  dlmalloc_threadsafe.bc  dlmalloc_threadsafe_debug.bc  emmalloc.bc  emmalloc_debug.bc  freetype.bc  generated_struct_info.json  gl.bc  html5.bc  icu.bc  libc-extras.bc  libc-mt.bc  libc.bc  libcxxabi.bc  libpng.bc  ogg.bc  pthreads.bc  pthreads_asmjs.bc  sdl2-gfx.bc  sdl2-image.bc  sdl2-net.bc  sdl2-ttf.bc  sdl2.bc  vorbis.bc  wasm-libc.bc  zlib.bc
